<resources>
    <string name="app_name">GmsCall</string>
    <string name="action_settings">Settings</string>
    <string-array name="day_view">
        <item>@string/yesterday</item>
        <item>@string/today</item>
        <item>@string/tomorrow</item>
    </string-array>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="title_activity_main">GSM Analysis</string>
    <string-array name="code_currency_array">
        <item>VND</item>
        <item>USD</item>
        <item>JPY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>INR</item>
        <item>SGD</item>
        <item>CAD</item>
    </string-array>

    <string-array name="name_currency_array">
        <item>Việt Nam Đồng</item>
        <item>Dollar</item>
        <item>Yen</item>
        <item>Euro</item>
        <item>Pound</item>
        <item>Rupee</item>
        <item>Singapore dollar</item>
        <item>Canadian dollar</item>
    </string-array>

    <string-array name="symbol_currency_array">
        <item>đ</item>
        <item>$</item>
        <item>¥</item>
        <item>€</item>
        <item>£</item>
        <item>₹</item>
        <item>S$</item>
        <item>C$</item>
    </string-array>

    <string name="db_path">/data/data/com.alanddev.gmscall/databases/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navi_header_default">indigo_pentagonal_background</string>

    <string name="level_120">-120</string>
    <string name="level_110">-110</string>
    <string name="level_100">-100</string>
    <string name="level_90">-90</string>
    <string name="level_80">-80</string>
    <string name="level_70">-70</string>
    <string name="level_60">-60</string>
    <string name="space">\u0020\u0020\u0020</string>

    <string name="time">Time</string>
    <string name="lac">LAC</string>
    <string name="node">Node</string>
    <string name="cellID">CELLID</string>
    <string name = "psc">PSC</string>

    <string name="level">Level</string>
    <string name="qual">Qual</string>

    <string name="type">Type</string>
    <string name="serv">Serv,s</string>
    <string name="operator">Operator</string>
    <string name="mcc">MCC</string>
    <string name="rnc">RNC</string>
    <string name="mnc">MNC</string>
    <string name="rscp">RSCP</string>
    <string name="rsrp">RSRP</string>
    <string name="rsrq">RSRQ</string>
    <string name="rssi">RSSI</string>
    <string name="band">Band</string>
    <string name="plmn">PLMN</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="speed">Speed</string>
    <string name="height">Height</string>
    <string name="altitude">Altitude</string>
    <string name="ground">Ground</string>
    <string name="ul">UL</string>
    <string name="dl">DL</string>
    <string name="data">Data</string>
    <string name="gps_accuracy">GPS Accuracy</string>
    <string name="nw_accuracy">NW Accuracy</string>
    <string name="ecno">ECNO</string>
    <string name="snr">SNR</string>
    <string name = "arfcn">ARFCN</string>
    <string name = "GSM">GSM Cell Table</string>
    <string name = "WDMA">WDMA Cell Table</string>
    <string name = "LTE">LTE Cell Table</string>

    <string name="serving_time">Serving time</string>

    <string name="snippet">Snippet</string>
    <string name="action_bluetooth">Send file</string>
    <string name="find">Search for Devices</string>
    <string name="bluetooth_setting">Bluetooth device chooser</string>
    <string name="paired_device">Paired Devices</string>
    <string name="avail_device">Available Devices</string>


    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_command_add">Add Command</string>
    <string name="title_activity_command_update">Update Command</string>

    <string name="dialog_confirm_delete_trans">Do you want to delete this transaction?</string>
    <string name="dialog_yes_button">Yes</string>
    <string name="dialog_no_button">No</string>

    <string name="action_save">Done</string>


    <string-array name="command_array">
        <item>Call CSSR</item>
        <item>CALL MOS</item>
        <item>Loop</item>
        <item>End Loop</item>
        <item>Wait</item>
    </string-array>
</resources>
